# ig-service-plan

./: Cargo.toml  LICENSE  README.md  example_service.yaml
src/: cli.rs  config.rs  main.rs  plan_processor.rs  processable_value.rs
