[package]
name = "ig-service-plan"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Yannik_Sc <yannik@yannik-sc.de>"]
description = "Declarative service structures with ServerAdmin"
readme = "README.md"

[dependencies]
ipnet = "2.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
futures = "0.3"
tokio = { version = "1.37", features = ["full"] }
adminapi = { git = "https://github.com/YannikSc/serveradmin.git" }
strfmt = "0.2"
serde_yml = "0.0.12"
indicatif = "0.17"
term-table = "1.3"
dialoguer = "0.11"
console = "0.15"
clap = { version = "4.5", features = ["derive"] }
